client/scss/layout/_navigation.scss
@use '../abstracts' as *;

.navigation {
  &__drop__title {
    font-family: $font-primary;
    font-size: $font-size-primary;
    letter-spacing: $letter-spacing-primary;
    margin-left: 0.5rem;
    padding-top: 0.375rem;
    padding-left: 0.375rem;
    padding-right: 0.375rem;
    padding-bottom: 0rem;
    &:hover {
      background-color: $color-primary;
    }
  }

  &__drop__title__profile {
    position: absolute;
    font-family: $font-primary;
    font-size: $font-size-primary;
    letter-spacing: $letter-spacing-primary;
    margin-left: 0.5rem;
    padding-top: 0.375rem;
    padding-left: 0.375rem;
    padding-right: 0.375rem;
    padding-bottom: 0rem;
    &:hover {
      background-color: $color-primary;
    }
  }

  &__user__button {
    border: 2px solid $color-black;
    font-family: $font-primary;
    font-size: $font-size-primary;
    letter-spacing: $letter-spacing-primary;
    margin-left: 0.5rem;
    padding-top: 0.375rem;
    padding-left: 0.375rem;
    padding-right: 0.375rem;
    padding-bottom: 0rem;
    &:hover,
    &:active {
      background: $color-primary;
    }
  }

  &__user__item {
    border: 2px solid transparent;
    font-family: $font-primary;
    font-size: $font-size-primary;
    letter-spacing: $letter-spacing-primary;
    margin-left: 0.5rem;
    padding-top: 0.375rem;
    padding-left: 0.375rem;
    padding-right: 0.375rem;
    padding-bottom: 0rem;
    &:hover,
    &:active {
      color: $color-primary;
      background: $color-primary;
      border: 2px solid $color-gray-dark;
    }
  }
}

///////////////////////////////////////////////////////
///  Overrides react-bootstrap's inbuilt selectors  ///
///////////////////////////////////////////////////////

// NAVBAR
.navbar {
  background-color: $color-gray-dark !important;
  padding-left: 4rem !important;
  padding-right: 4rem !important;
  text-align: center !important;
}

// BRAND
.navbar-brand {
  padding: 0;
  margin: 0;
  a {
    color: $color-black;
    font-family: $font-secondary;
    font-size: $font-size-secondary;
    letter-spacing: $letter-spacing-secondary;
    padding: 0;
    &:hover {
      color: $color-primary;
      text-decoration: none;
    }
  }
}

// DROPDOWN
.nav-item .dropdown-menu {
  border: 0px;
  border-radius: 0px;
  padding: 0;
  background-color: $color-primary;

  @media (max-width: 991px) {
    text-align: center;
  }
}

// DROPDOWN ITEM
.dropdown-item {
  color: $color-white !important;
  font-family: $font-primary !important;
  font-size: $font-size-primary !important;
  letter-spacing: $letter-spacing-primary !important;
  padding-top: 0.375rem !important;
  padding-left: 0.375rem !important;
  padding-right: 0.375rem !important;
  padding-bottom: 0rem !important;
  &:hover {
    background-color: $color-secondary !important;
  }
}

// DROPDOWN ALIGN RIGHT
.dropdown-menu-right {
  text-align: right !important;
}

// DROPDOWN (REMOVE CARET)
.dropdown-toggle::after {
  content: none !important;
}

// ALL
.navbar-light .navbar-nav .nav-link {
  color: $color-black !important;
  white-space: nowrap !important;
  font-family: $font-primary !important;
  font-size: $font-size-primary !important;
  letter-spacing: $letter-spacing-primary !important;
}

